--- a/DailyReview/Base.lproj/MainMenu.xib
+++ b/DailyReview/Base.lproj/MainMenu.xib
@@ -67,12 +67,17 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Review" id="Ia5-5Y-HPE">
                         <items>
-                            <menuItem title="Open" keyEquivalent="o" id="h7c-J5-6ay">
+                            <menuItem title="Open" id="h7c-J5-6ay">
+                                <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                                <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="open:" target="ZsR-ur-AqE" id="1Yc-IR-zEZ"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Move..." keyEquivalent="s" id="Ljl-Rj-MsP">
+                            <menuItem title="Move..." keyEquivalent="m" id="Ljl-Rj-MsP">
+                                <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="move:" target="ZsR-ur-AqE" id="sFm-oD-U9P"/>
                                 </connections>
@@ -86,7 +91,7 @@ CA
                                     <action selector="reviewNever:" target="ZsR-ur-AqE" id="q0g-h7-BvY"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Trash" id="XGF-i7-HgK">
+                            <menuItem title="Move to Trash" id="XGF-i7-HgK">
                                 <string key="keyEquivalent" base64-UTF8="YES">
 CA
 </string>
@@ -94,6 +99,7 @@ CA
                                     <action selector="trash:" target="ZsR-ur-AqE" id="UIN-XO-w1l"/>
                                 </connections>
                             </menuItem>
+                            <menuItem isSeparatorItem="YES" id="YLC-op-cy4"/>
                             <menuItem title="Later Today" keyEquivalent="1" id="Dq0-ix-BRT">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
@@ -400,7 +406,7 @@ CA
                             <rect key="frame" x="1" y="1" width="537" height="111"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" id="Iwx-8s-pdn">
+                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnResizing="NO" autosaveColumns="NO" id="Iwx-8s-pdn">
                                     <rect key="frame" x="0.0" y="0.0" width="537" height="111"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
@@ -438,11 +444,11 @@ CA
                         <rect key="frame" x="20" y="105" width="539" height="420"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <clipView key="contentView" misplaced="YES" id="34u-Sc-lLf">
-                            <rect key="frame" x="1" y="1" width="537" height="418"/>
+                            <rect key="frame" x="1" y="1" width="537" height="403"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" id="a0b-2r-2hM">
-                                    <rect key="frame" x="0.0" y="0.0" width="537" height="418"/>
+                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" autosaveColumns="NO" id="a0b-2r-2hM">
+                                    <rect key="frame" x="0.0" y="0.0" width="550" height="403"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -461,13 +467,26 @@ CA
                                             </textFieldCell>
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         </tableColumn>
+                                        <tableColumn width="10" minWidth="10" maxWidth="3.4028234663852886e+38" id="dOP-h9-F1q">
+                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                                <font key="font" metaFont="smallSystem"/>
+                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                            </tableHeaderCell>
+                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="W6p-lY-n2f">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                            <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                        </tableColumn>
                                     </tableColumns>
                                 </tableView>
                             </subviews>
                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="tdB-Kv-VCF">
-                            <rect key="frame" x="1" y="1" width="0.0" height="16"/>
+                        <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="tdB-Kv-VCF">
+                            <rect key="frame" x="1" y="404" width="537" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="h8P-V4-gWR">
@@ -648,6 +667,7 @@ CA
         <customObject id="ZsR-ur-AqE" customClass="DBAppController">
             <connections>
                 <outlet property="reviewTable" destination="a0b-2r-2hM" id="9vK-Fr-dIu"/>
+                <outlet property="searchTable" destination="Iwx-8s-pdn" id="Qsp-io-K7b"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="SFh-HV-jrQ"/>
             </connections>
         </customObject>
